# algorithmic_trading_lib

./: LICENSE  README.md  main.py  pyproject.toml  run.cfg
src/app/: generic_bot_app.py
src/data_structures/: marketdata_state.py  portfolio_state.py  position.py  time_series_inputs.py
src/execution/: configuration.py  orchestrator.py
src/parsers/: time_series_json_parsers.py
src/readers/: abstract_apis.py  alpaca_broker_api.py  alpha_vantage_mkdata_api.py  api_factories.py  rest_api.py  twelvedata_mkdata_api.py  yfinance_mkdata_api.py
src/services/: market_data_service.py
src/strategys/: abstract_strategy.py  market_open_momentum_strategy.py  sentiment_strategy.py
src/utilities/: risk_manager.py  statistics_gatherer.py
